# fearless-rewrites-with-hypothesis

./: pyproject.toml
src/frwh/: legacy.py  rewrite.py
tests/: test_benchmark.py  test_legacy.py  test_legacy_against_rewrite.py
