[tool.poetry]
name = "frwh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
hypothesis = "^6.68.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
